根据第二次作业要求改进完成，字符集尚未解决。

--- a/client/views/login.html
+++ b/client/views/login.html
@@ -40,20 +40,12 @@
 					<span class="focus-input100"></span>
 				</div>
 
-				<div class="container-login100-form-btn p-t-50">
+				<div class="container-login100-form-btn p-t-50 p-b-50">
 					<button class="login100-form-btn" id="loginbutton">
 						Log in
 					</button>
 				</div>
-				<div class="flex-col-c p-t-140 p-b-40">
-					<span class="txt1 p-b-9">
-						Don’t have an account?
-					</span>
 
-					<a href="/register" class="txt3">
-						Sign up now
-					</a>
-				</div>
 			</form>
 		</div>
 	</div>
