--- a/client/views/template.html
+++ b/client/views/template.html
@@ -2,20 +2,16 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8" />
+    <meta charset="gbk" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <meta name="description" content="" />
-    <meta name="author" content="" />
     <title>Remote record | {{block 'title'}}{{/block}}</title>
     <link rel="icon" type="image/x-icon" href="../assets/favicon.ico" />
     <!-- Bootstrap icons-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
     <!-- Google fonts-->
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link href="https://fonts.googleapis.com/css2?family=Newsreader:ital,wght@0,600;1,600&amp;display=swap"
         rel="stylesheet" />
-    <link
-        href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,300;0,500;0,600;0,700;1,300;1,500;1,600;1,700&amp;display=swap"
+    <link href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,300;0,500;0,600;0,700;1,300;1,500;1,600;1,700&amp;display=swap"
         rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,400;1,400&amp;display=swap"
         rel="stylesheet" />
@@ -38,7 +34,6 @@
                 <ul class="navbar-nav ms-auto me-4 my-3 my-lg-0">
                     <li class="nav-item"><a class="nav-link me-lg-3" href="/recordtest">Test</a></li>
                     <li class="nav-item"><a class="nav-link me-lg-3" href="/record">Record</a></li>
-                    <li class="nav-item"><a class="nav-link me-lg-3" href="/register">Sign up</a></li>
                     {{ if sessionUser }}
                     <li class="nav-item"><a class="nav-link me-lg-3" href="/logout">Log out</a></li>
                     {{ else }}
@@ -49,7 +44,7 @@
                 <button class="btn btn-primary rounded-pill px-3 mb-2 mb-lg-0">
                     <span class="d-flex align-items-center">
                         <i class="bi-person-fill me-2"></i>
-                        <span class="small">{{ sessionUser.username }}</span>
+                        <span class="small">{{ sessionUser.stu_name }}</span>
                     </span>
                 </button>
                 {{ /if }}
@@ -67,7 +62,7 @@
         </div>
     </footer>
     <!-- Bootstrap core JS-->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="../vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
     <!-- Core JS-->
     <script src="../js/scripts.js"></script>
     {{ block 'script'}}{{ /block }}
