--- a/client/views/template.html
+++ b/client/views/template.html
@@ -7,13 +7,13 @@
     <title>Remote record | {{block 'title'}}{{/block}}</title>
     <link rel="icon" type="image/x-icon" href="../assets/favicon.ico" />
     <!-- Bootstrap icons-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
+    <link href="../vendor/bootstrap/css/bootstrap-icons.css" rel="stylesheet" />
     <!-- Google fonts-->
-    <link href="https://fonts.googleapis.com/css2?family=Newsreader:ital,wght@0,600;1,600&amp;display=swap"
+    <link href="../vendor/google/Newsreader.css"
         rel="stylesheet" />
-    <link href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,300;0,500;0,600;0,700;1,300;1,500;1,600;1,700&amp;display=swap"
+    <link href="../vendor/google/Mulish.css"
         rel="stylesheet" />
-    <link href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,400;1,400&amp;display=swap"
+    <link href="../vendor/google/Kanit.css"
         rel="stylesheet" />
     <!-- Core theme CSS (includes Bootstrap)-->
     <link href="../css/styles.css" rel="stylesheet" />
@@ -28,7 +28,6 @@
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive"
                 aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                 Menu
-                <i class="bi-list"></i>
             </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ms-auto me-4 my-3 my-lg-0">
@@ -43,7 +42,6 @@
                 {{ if sessionUser }}
                 <button class="btn btn-primary rounded-pill px-3 mb-2 mb-lg-0">
                     <span class="d-flex align-items-center">
-                        <i class="bi-person-fill me-2"></i>
                         <span class="small">{{ sessionUser.stu_name }}</span>
                     </span>
                 </button>
