--- a/client/views/video.html
+++ b/client/views/video.html
@@ -1,3 +1,6 @@
+<!DOCTYPE html>
+<html lang="en">
+
 <head>
     <title>Remote record | Video {{userid}} {{videotype}}</title>
     <link rel="icon" type="image/x-icon" href="../assets/favicon.ico" />
@@ -5,15 +8,14 @@
 
 
 <body width="100%" height="100%">
-        <video id="videoPlayer" width="100%" height="100%" muted controls autoplay>
-            <source src="/video/{{userid}}/{{videotype}}/{{number}}" type="video/webm">
-        </video>
-
+    <video id="videoPlayer" width="100%" height="100%" controls autoplay>
+        <source src="/video/{{userid}}/{{videotype}}/live/{{number}}" type="video/webm">
+    </video>
 </body>
 
 <script type="text/javascript">
     function reloadPage() {
         window.location.reload(true);
     }
-    setInterval(reloadPage, 4000);
+    setInterval(reloadPage, 3500);
 </script>
