Upload to Version 1.1.
Add lots of functions.

--- a/client/views/change-password.html
+++ b/client/views/change-password.html
@@ -1,6 +1,6 @@
 {{extend './template.html'}}
 
-{{block 'title'}}Change password{{/block}}
+{{block 'title'}}修改密码{{/block}}
 
 {{block 'head'}}
 <link rel="stylesheet" type="text/css" href="../vendor/bootstrap/css/bootstrap.min.css">
@@ -25,27 +25,34 @@
 <div class="limiter">
 	<div class="container-login100">
 		<div class="wrap-login100">
-			<form class="login100-form validate-form p-l-55 p-r-55 p-t-178">
+			<div class="login100-form validate-form p-l-55 p-r-55 p-t-178">
 				<span class="login100-form-title">
-					Change Password
+					修改初始密码
 				</span>
 
-				<div class="wrap-input100 validate-input m-b-16" data-validate="Please enter old password">
-					<input class="input100" type="password" id="oldpassword" placeholder="Old password">
+				<span py-2>新密码需包含数字、小写字母、大写字母、其它符号 * = - _ # $ % ! 这四种中的至少三种，且长度大于等于12位。</span>
+
+				<div class="wrap-input100 validate-input m-b-16">
+					<input class="input100" type="password" id="oldpassword" placeholder="旧密码">
 					<span class="focus-input100"></span>
 				</div>
 
-				<div class="wrap-input100 validate-input" data-validate="Please enter new password">
-					<input class="input100" type="password" id="newpassword" placeholder="New password">
+				<div class="wrap-input100 validate-input m-b-16">
+					<input class="input100" type="password" id="newpassword" placeholder="新密码">
+					<span class="focus-input100"></span>
+				</div>
+
+				<div class="wrap-input100 validate-input">
+					<input class="input100" type="password" id="confirmpassword" placeholder="确认新密码">
 					<span class="focus-input100"></span>
 				</div>
 
 				<div class="container-login100-form-btn p-t-50 p-b-50">
 					<button class="login100-form-btn" id="loginbutton">
-						Change password
+						修改密码
 					</button>
 				</div>
-			</form>
+			</div>
 		</div>
 	</div>
 </div>
