--- a/client/views/final-video.html
+++ b/client/views/final-video.html
@@ -8,7 +8,7 @@
 
 
 <body width="100%" height="100%">
-    <video id="videoPlayer" width="100%" height="100%" controls autoplay>
+    <video id="videoPlayer" width="100%" height="100%" controls autoplay muted>
         <source src="/video/{{userid}}/{{videotype}}/final/{{number}}" type="video/mp4">
     </video>
 </body>
