--- a/client/views/login.html
+++ b/client/views/login.html
@@ -1,6 +1,6 @@
 {{extend './template.html'}}
 
-{{block 'title'}}Log in{{/block}}
+{{block 'title'}}登录{{/block}}
 
 {{block 'head'}}
 <link rel="stylesheet" type="text/css" href="../vendor/bootstrap/css/bootstrap.min.css">
@@ -27,22 +27,22 @@
 		<div class="wrap-login100">
 			<form class="login100-form validate-form p-l-55 p-r-55 p-t-178">
 				<span class="login100-form-title">
-					Log In
+					登录
 				</span>
 
 				<div class="wrap-input100 validate-input m-b-16" data-validate="Please enter username">
-					<input class="input100" type="text" id="username" placeholder="Username">
+					<input class="input100" type="text" id="username" placeholder="用户名">
 					<span class="focus-input100"></span>
 				</div>
 
 				<div class="wrap-input100 validate-input" data-validate="Please enter password">
-					<input class="input100" type="password" id="password" placeholder="Password">
+					<input class="input100" type="password" id="password" placeholder="密码">
 					<span class="focus-input100"></span>
 				</div>
 
 				<div class="container-login100-form-btn p-t-50 p-b-50">
 					<button class="login100-form-btn" id="loginbutton">
-						Log in
+						登录
 					</button>
 				</div>
 
