--- a/client/views/template.html
+++ b/client/views/template.html
@@ -2,9 +2,9 @@
 <html lang="en">
 
 <head>
-    <meta charset="gbk" />
+    <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <title>Remote record | {{block 'title'}}{{/block}}</title>
+    <title>WebRTC Record | {{block 'title'}}{{/block}}</title>
     <link rel="icon" type="image/x-icon" href="../assets/favicon.ico" />
     <!-- Bootstrap icons-->
     <link href="../vendor/bootstrap/css/bootstrap-icons.css" rel="stylesheet" />
@@ -24,25 +24,25 @@
     <!-- Navigation-->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top shadow-sm" id="mainNav">
         <div class="container px-5">
-            <a class="navbar-brand fw-bold" href="/">Remote record</a>
+            <a class="navbar-brand fw-bold" href="/">远程录屏</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive"
                 aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-                Menu
+                菜单
             </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ms-auto me-4 my-3 my-lg-0">
-                    <li class="nav-item"><a class="nav-link me-lg-3" href="/recordtest">Test</a></li>
-                    <li class="nav-item"><a class="nav-link me-lg-3" href="/record">Record</a></li>
+                    <li style="display:none;" class="nav-item"><a class="nav-link me-lg-3" href="/recordtest">测试设备</a></li>
+                    <li style="display:none;" class="nav-item"><a class="nav-link me-lg-3" href="/record">进入录制</a></li>
                     {{ if sessionUser }}
-                    <li class="nav-item"><a class="nav-link me-lg-3" href="/logout">Log out</a></li>
+                    <li class="nav-item"><a class="nav-link me-lg-3" href="/logout">退出登录</a></li>
                     {{ else }}
-                    <li class="nav-item"><a class="nav-link me-lg-3" href="/login">Log in</a></li>
+                    <li style="display:none;" class="nav-item"><a class="nav-link me-lg-3" href="/login">登录</a></li>
                     {{ /if }}
                 </ul>
                 {{ if sessionUser }}
                 <button class="btn btn-primary rounded-pill px-3 mb-2 mb-lg-0">
                     <span class="d-flex align-items-center">
-                        <span class="small">{{ sessionUser.stu_name }}</span>
+                        <span class="small">{{ sessionUser.stu_no }} {{ sessionUser.stu_name }}</span>
                     </span>
                 </button>
                 {{ /if }}
@@ -55,7 +55,7 @@
     <footer class="bg-gradient-primary-to-secondary text-center fixed-bottom p-1">
         <div class="container p-1">
             <div class="text-white-50 small">
-                <div class="mb-2">&copy; Remote record 2022. All Rights Reserved.</div>
+                <div class="mb-2">&copy; Remote record 2022. All Rights Reserved. Made by Cxx Zzk.</div>
             </div>
         </div>
     </footer>
